chore: 4.18.0 (#1047)
* fix: disable test compilation for docker build

* feat: improve CI

* fix: solve unit test

* fix: unit tests

* fix: unit tests

* feat: use HIE

* feat: remove default stamp

* feat: add ddi3 to ddi4 converters (#1025)

* fix: disable test compilation for docker build

* feat: improve CI

* fix: solve unit test

* fix: unit tests

* fix: unit tests

* feat: add ddi3 to ddi4 converters

* fix: solve unit test

* fix: solve sonar issues

* refactor: rename queries (#1029)

* fix: disable test compilation for docker build

* feat: improve CI

* fix: solve unit test

* fix: unit tests

* fix: unit tests

* refactor: rename all queries class

* feat: be able to validate json schema (#1030)

* refactor: delete log

* Update version to 4.15.0-rc1 in pom.xml

* feat: add unit tests for Collections

* feat: migrate rdfconnection interface

* feat: migrate rasmp service

* Update version to 4.15.0-rc2 in pom.xml

* testing with more maven logs

* test to force end of lines of mvnw

* fix typo

* test avec nouveau dockerfile

* adding missing module

* fix: add missing port

* fix: remove wrong properties

* feat: add organizations endpoint with stamp and label retrieval from GraphDB

- Add OrganisationOption model with stamp and label fields
- Create OrganisationRepository server-side port
- Implement OrganisationGraphDBRepository using SPARQL queries via FreeMarker
- Add /v2/stamps endpoint to StampResources returning full organization data
- Add comprehensive unit and integration tests using Testcontainers

* feat: fix issue with organisations

* feat: be able to create token for colectica

* feat: be able get physical instance

* feat: add get PI on mock

* feat: init real hegaxonale architecture

* feat: improve archunit test

* feat: improve archunit test

* feat: continue the migration to hexa

* tests (domain Collection)

* feat: create CreateCollectionCommand

* feat (domain Collection) post with concepts

* feat: continue kata

* fix: solve 